@@ -27,6 +27,7 @@ TinkerPop 3.2.7 (Release Date: NOT OFFICIALLY RELEASED YET)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 * Bump to Jackson 2.8.10.
+* Added an `EmbeddedRemoteConnection` so that it's possible to mimic a remote connection within the same JVM.
 * The Console's `plugin.txt` file is only updated if there were manually uninstalled plugins.
 * Fixed a bug in `MatchStep` where mid-traversal `where()` variables were not being considered in start-scope.
 * Generalized `MatchStep` to locally compute all clauses with barriers (not just reducing barriers).
